<resources>
    <string name="app_name">Pandaboo</string>
    <string name="pandaboo_logo">Pandaboo Logo</string>
    <string name="login_text">Login</string>
    <string name="sign_in_to_your_account_text">Sign in to your account</string>
    <string name="username_icon">Username Icon</string>
    <string name="username_text">Username</string>
    <string name="password_icon">Password Icon</string>
    <string name="password_text">Password</string>
    <string name="i_forgot_my_password_text">I forgot my password.</string>
    <string name="click_here_to_reset_text">Click here to reset.</string>
    <string name="register_new_account_text">Register New Account</string>
    <string name="start_button">START</string>
    <string name="music_icon_not_muted">Music Icon(Not Muted)</string>
    <string name="timer_icon">Timer Icon</string>
    <string name="goodjob">GoodJobtext</string>
    <string name="set_timer_text">Set Timer</string>
    <string name="studyMinutes">studyMinutes</string>
    <string name="studyMin">studyMin</string>
    <string name="pauseMin">pauseMin</string>
    <string name="earnedBamboo">earnedBamboo</string>
    <string name="pauseMinutes">pauseMinutes</string>
    <string name="totalEarned">totalEarned</string>
    <string name="redoTimer">redoTimer</string>
    <string name="backHome">backHome</string>
    <string name="totalBamboo">totalBamboo</string>
    <string name="bamboo_icon">bamboo icon</string>
    <string name="home_button">home button</string>
    <string name="redo_button">redo button</string>
    <string name="total_bamboo_currency">total bamboo currency</string>
    <string name="button">Button</string>
    <string name="panda">Panda</string>
    <string name="shop">Shop</string>
    <string name="planner">Planner</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="view_success">View Success</string>
    <string name="bamboo_currency">bamboo currency</string>
    <string name="backhome">backHome</string>
    <string name="pandaimage">pandaImage</string>
    <string name="bamboogrowing">bambooGrowing</string>
    <string name="backToHome">Back</string>
    <string name="back">Back</string>
    <string name="bamboocurrencyimage">bambooCurrencyImage</string>
    <string name="_00">00</string>
    <string name="panda_shop_bg">pandaShopBg</string>
    <string name="pandashopword">pandaShopWord</string>
    <string name="roomskintitle">roomSkinTitle</string>
    <string name="defaultskin">defaultSkin</string>
    <string name="skin1">skin1</string>
    <string name="skin2">skin2</string>
    <string name="skin3">skin3</string>
    <string name="skin4">skin4</string>
    <string name="skin5">skin5</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="timer_countdown_separator">:</string>
    <string name="cancel_text">Cancel</string>
    <string name="pause_text">Pause</string>
    <string name="redo_timer_text">Redo Timer</string>
    <string name="home_text">Home</string>
    <string name="failed_timer_text">DON\'T GET TOO DISTRACTED NEXT TIME!</string>
    <string name="failed_timer_image_text">Failed Timer Image</string>
    <string name="redo_timer_icon_text">Redo Timer Icon</string>
    <string name="home_icon_text">Home Icon</string>
    <string name="good_job_text">GOOD JOB!</string>
    <string name="study_minutes_text"><u>Study Duration</u></string>
    <string name="pause_minutes_text"><u>Pause Duration</u></string>
    <string name="total_earned_text"><u>Total Earned</u></string>
    <string name="pause_timer_text">Don\'t pause for too long or else you will receive fewer coins!</string>
    <string name="resume_icon_text">Resume Icon</string>
    <string name="panda_celebrating">Panda Celebrating</string>
    <string name="cancel_session_text">Do you want to end the session?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="purchase_text">Do you want to purchase this item?</string>
    <string name="equip_text">Do you want to equip this item?</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_text">Email</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="click_here_to_sign_in">Click here to sign in</string>
    <string name="signup_text">Sign Up</string>
    <string name="music_icon">Music Icon</string>
    <string name="music_text">Music</string>
    <string name="music_description">Series of mixes that loops for your study sessions</string>
    <string name="shop_skin_owned">Owned</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="drop_down">Priority?</string>
    <string-array name="languages">
        <item>Highest</item>
        <item>Medium</item>
        <item>Lowest</item>
    </string-array>
</resources>