<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olivegreen"
    tools:context=".Shop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/teal_700">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="307dp"
            android:layout_marginRight="307dp"
            android:backgroundTint="@color/white"
            android:text="@string/back"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/bambooCurrency"
            android:layout_width="122dp"
            android:layout_height="47dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/bamboocurrencyimage"
            app:srcCompat="@drawable/untitled"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/totalBamboo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bambooCurrency"
            android:layout_alignEnd="@+id/bambooCurrency"
            android:layout_alignRight="@+id/bambooCurrency"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="71dp"
            android:layout_marginRight="71dp"
            android:text="@string/_00"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/pandaShopBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/panda_shop_bg"
        app:srcCompat="@drawable/_panda" />

    <ImageView
        android:id="@+id/pandaShopWord"
        android:layout_width="338dp"
        android:layout_height="121dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/pandashopword"
        app:srcCompat="@drawable/pandashop" />

    <ImageView
        android:id="@+id/roomSkinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="224dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/roomskintitle"
        app:srcCompat="@drawable/romm_category" />

    <ImageView
        android:id="@+id/defaultSkin"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="340dp"
        android:contentDescription="@string/defaultskin"
        app:srcCompat="@drawable/skin1" />

    <ImageView
        android:id="@+id/skinOne"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:contentDescription="@string/skin1"
        app:srcCompat="@drawable/skin2" />

    <ImageView
        android:id="@+id/skinTwo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="480dp"
        android:contentDescription="@string/skin2"
        app:srcCompat="@drawable/skin3" />

    <ImageView
        android:id="@+id/skinThree"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:contentDescription="@string/skin3"
        app:srcCompat="@drawable/skin4" />

    <ImageView
        android:id="@+id/skinFour"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="620dp"
        android:contentDescription="@string/skin4"
        app:srcCompat="@drawable/skin5" />

    <ImageView
        android:id="@+id/skinFive"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:contentDescription="@string/skin5"
        app:srcCompat="@drawable/skin6"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/comingSoon"
        android:layout_width="108dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/skinFive"
        android:layout_alignLeft="@+id/skinFive"
        android:layout_alignTop="@+id/skinFive"
        android:layout_alignEnd="@+id/skinFive"
        android:layout_alignRight="@+id/skinFive"
        android:layout_alignBottom="@+id/skinFive"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="53dp"
        android:text="@string/coming_soon"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>