<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/airforceblue">

    <ImageView
        android:id="@+id/pandabooLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/pandaboo_logo"
        android:src="@mipmap/pandatransparent">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/paleyellow"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:layout_below="@+id/pandabooLogo"
        android:layout_centerHorizontal="true"
        android:id="@+id/pandabooTitle">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/login_text"
        android:layout_below="@id/pandabooTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:id="@+id/loginText">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/sign_in_to_your_account_text"
        android:id="@id/signInText"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:layout_below="@id/loginText">
    </TextView>

    <RelativeLayout
        android:id="@+id/inputArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/userNameArea"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:id="@+id/userNameIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/username_icon"
                android:src="@drawable/username_icon"
                app:tint="@color/black"></ImageView>

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="-44dp"
                android:layout_marginLeft="-44dp"
                android:layout_toEndOf="@+id/userNameIcon"
                android:layout_toRightOf="@+id/userNameIcon"
                android:autofillHints="username"
                android:hint="@string/username_text"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"></EditText>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/passwordArea"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@+id/userNameArea"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/password_icon"
                app:tint="@color/black"></ImageView>

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="-41dp"
                android:layout_marginLeft="-41dp"
                android:layout_toEndOf="@+id/passwordIcon"
                android:layout_toRightOf="@+id/passwordIcon"
                android:autofillHints="password"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"></EditText>

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/inputArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/login_border"></Button>

    <RelativeLayout
        android:id="@+id/resetPasswordArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_forgot_my_password_text"
            android:textColor="@color/white"
            android:textSize="15sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/forgotPasswordText"
            android:layout_toEndOf="@+id/forgotPasswordText"
            android:text="@string/click_here_to_reset_text"
            android:textColor="@color/white"
            android:textStyle="bold">
        </TextView>

    </RelativeLayout>

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/resetPasswordArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/whiteborder"
        android:text="@string/register_new_account_text"
        ></Button>

</RelativeLayout>