<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
    android:background="@color/airforceblue"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/pandabooLogo"
        android:layout_width="240dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/pandaboo_logo"
        android:src="@mipmap/pandaboo_transparent" />


    <TextView
        android:id="@+id/pandabooTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pandabooLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:fontFamily="@font/redressed"
        android:textColor="@color/pale_yellow"
        android:textSize="75dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginText"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/login_text"
        android:layout_below="@id/pandabooTitle"
        android:layout_marginTop="10dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@id/signInText"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/reset_password"
        android:layout_below="@id/loginText"
        android:layout_marginTop="5dp">
    </TextView>


    -<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:id="@+id/inputArea"
    android:layout_below="@+id/signInText"
    android:layout_marginTop="10dp">


    <RelativeLayout
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:id="@+id/userNameArea"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:src="@drawable/username_icon"
            android:contentDescription="@string/username_icon"
            android:id="@+id/userNameIcon" app:tint="@color/black"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/RegisterEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_toEndOf="@+id/userNameIcon"
            android:layout_toRightOf="@+id/userNameIcon"
            android:autofillHints="username"
            android:hint="@string/username_text"
            android:inputType="text|textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

    </RelativeLayout>


    -<RelativeLayout
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:layout_width="350dp"
    android:id="@+id/EmailArea"
    android:layout_below="@+id/userNameArea"
    android:layout_marginTop="10dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp">

    <ImageView
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:src="@drawable/email_pic"
        android:contentDescription="@string/email_text"
        android:id="@+id/EmailIcon"
        app:tint="@color/black"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toEndOf="@+id/EmailIcon"
        android:layout_toRightOf="@+id/EmailIcon"
        android:autofillHints="password"
        android:hint="@string/email_text"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

</RelativeLayout>

</RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/inputArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_border"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />


    -<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:id="@+id/resetPasswordArea"
    android:layout_above="@+id/loginButton"
    android:layout_marginTop="59dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/forgotPasswordText"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/i_forgot_my_password_text"
        tools:ignore="TextContrastCheck"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/click_here_to_reset_text"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/forgotPasswordText"
        android:layout_toEndOf="@+id/forgotPasswordText"/>


</RelativeLayout>



</RelativeLayout>
